<resources>
    <string name="app_name">SecondHand</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="contoh_johndee_gmail_com">Contoh : johndee@gmail.com</string>
    <string name="contoh_johndee">Contoh : Johndee</string>
    <string name="masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun">Belum punya akun ?</string>
    <string name="sudah_punya_akun">Sudah punya akun ?</string>
    <string name="daftar_di_sini">Daftar di sini</string>
    <string name="masuk_di_sini">Masuk di sini</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="harga_produk">Harga Produk</string>
    <string name="rp_0_00">0,00</string>
    <string name="kategori">Kategori</string>
    <string name="pilih_kategori">Pilih Kategori</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="foto_produk">Foto Produk</string>
    <string name="terbitkan">Terbitkan</string>
    <string name="preview">Preview</string>
    <string name="akun_saya">Akun Saya</string>
    <string name="ubah_akun">Ubah Akun</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="keluar">Keluar</string>
    <string name="lengkapi_info_akun">Lengkapi Info Akun</string>
    <string name="nama">Nama</string>
    <string name="kota">Kota</string>
    <string name="pilih_kota">Pilih Kota</string>
    <string name="alamat">Alamat</string>
    <string name="contoh_jalan_ikan_hiu_33">Contoh : Jalan Ikan Hiu 33</string>
    <string name="no_handphone">No Handphone</string>
    <string name="simpan">Simpan</string>
    <string name="add_image">add image</string>
    <string name="home">Home</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="jual">Jual</string>
    <string name="profile">Profile</string>
    <string name="rp">Rp</string>
    <string name="telusuri_kategori">Telusuri Kategori</string>
    <string name="semua">Semua</string>
    <string name="daftar_jual_saya">Daftar Jual Saya</string>
    <string name="nama_penjual">Nama Penjual</string>
    <string name="penawaran_produk">penawaran produk</string>
    <string name="jam_tangan_casio">Jam Tangan Casio</string>
    <string name="rp_250_000">Rp 250.000</string>
    <string name="ditawar_rp_200_0000">Ditawar Rp 200.0000</string>
    <string name="_20_apr_14_04">20 Apr, 14:04</string>
    <string name="image_allert">image allert</string>
    <string name="cari_di_second_chance">Cari di Second Chance</string>
    <string name="image_search">image search</string>
    <string name="button_terbitkan">Terbitkan</string>
    <string name="aksesoris">Aksesoris</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="saya_tertarik_dan_ingin_nego">Saya Tertarik dan Ingin Nego</string>
    <string name="image">image</string>
    <string name="masukkan_harga_tawarmu">Masukkan Harga Tawarmu</string>
    <string name="harga_tawaranmu_akan_diketahui_penual_jika_penjual_cocok_kamu_akan_segera_dihubungi_penjual">Harga tawaranmu akan diketahui penual, jika penjual cocok kamu akan segera dihubungi penjual.</string>
    <string name="harga_tawar">Harga Tawar</string>
    <string name="kirim">Kirim</string>
    <!--info penawar-->
    <string name="info_penawar">Info Penawar</string>
    <string name="daftar_produuk_yang_ditawar">Daftar Produkmu yang Ditawar</string>
    <string name="tolak">Tolak</string>
    <string name="terima">Terima</string>
    <string name="nama_pembeli">Nama pembeli</string>
    <string name="segera_hubungi_pembeli_melalui_whatsapp_untuk_transaksi_selanjutnya">Segera hubungi pembeli melalui whatsapp untuk transaksi selanjutnya</string>
    <string name="product_match">Product Match</string>
    <string name="hubungi_via_whatsapp">Hubungi via Whatsapp</string>
    <string name="status">Status</string>
    <string name="hubungi">Hubungi</string>
    <string name="pebarui_status_penjualan_produkmu">Perbarui status penjualan produkmu</string>
    <string name="berhasil_terjual">Berhasil Terjual</string>
    <string name="kamu_telah_sepakat_menjual_produk_ini_kepada_pembeli">Kamu telah sepakat menjual produk ini kepada pembeli</string>
    <string name="batalkan_transaksi">Batalkan Transaksi</string>
    <string name="kamu_membatalkan_transaksi_produk_ini_kepada_pembeli">Kamu membatalkan transaksi produk ini kepada pembeli</string>
    <string name="status_produk_berhasil_diperbarui">Status produk berhasil diperbarui</string>
    <string name="berhasil_mendapat_harga">Yeay kamu berhasil mendapat harga yang sesuai</string>
    <string name="daftar_jual">Daftar Jual</string>
    <string name="ditawar">Ditawar</string>
    <string name="nama_minimal_3_karakter">Nama minimal 3 karakter</string>
    <string name="password_minimal_6_karakter">Password minimal 6 karakter</string>
    <string name="email_tidak_sesuai_format">Email tidak sesuai format</string>
    <string name="x">X</string>
    <string name="lengkapi_detail_produk">Lengkapi Detail Produk</string>
    <string name="_62">+62</string>
    <string name="_8123456789">8123456789</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="product">Product</string>
    <string name="diminati">Diminati</string>
    <string name="terjual">Terjual</string>
    <string name="_dollar">$</string>

    <string name="tab_text_1">Product</string>
    <string name="tab_text_2">Diminati</string>
    <string name="tab_text_3">Terjual</string>
    <string name="edit">Edit</string>
    <string name="_plus">+</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="kategori_dipilih">Kategori dipilih (maks 3):</string>
    <string name="anda_belum_memilih_kategori">Anda belum memilih kategori</string>
    <string name="promo">Promo</string>
    <string name="promo_spesial_di_secondhand">Promo spesial di SecondHand</string>
    <string name="yuk_belanja">Yuk, Belanja!</string>
    <string name="_13">13</string>
    <string name="belanja">Belanja</string>
    <string name="produk_serupa">Produk Serupa</string>
    <string name="plus">+</string>
    <string name="hapus_dari_wishlist">Hapus Dari Wishlist</string>
    <string name="daftar_wishlist">Daftar Wishlist</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>
    <string name="ubah_kata_sandi">Ubah Kata Sandi</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="password_sekarang">Password Sekarang</string>
    <string name="password_baru">Password Baru</string>
    <string name="konfirmasi_password_baru">Konfirmasi Password Baru</string>
    <string name="hapus_produk">Hapus Produk</string>
    <string name="edit_produk">Edit Produk</string>

    <string name="leku_title_activity_location_picker">Location Picker</string>
    <string name="leku_load_location_error">Ada yang salah. Coba kembali nanti</string>
    <string name="leku_no_search_results">Alamat yang dicari tidak ada</string>
    <string name="leku_unknown_location">Lokasi tidak diketahui</string>
    <string name="leku_voice_search_promp">Search by voice…</string>
    <string name="leku_voice_search_extra_language">en-EN</string>
    <string name="leku_toolbar_action_voice_title">Voice</string>
    <string name="leku_search_hint">Cari alamat</string>
    <string name="history">History</string>
    <string name="preview_produk">Preview Produk</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="icon">icon</string>
    <string name="_0">0</string>
    <string name="anda_belum_memiliki_notifikasi">Anda Belum Memiliki Notifikasi</string>
    <string name="belum_ada_produkmu_yang_diminati_nih_sabar_ya_rejeki_nggak_kemana_kok">Belum ada produkmu yang diminati nih, sabar ya rejeki nggak kemana kok</string>
    <string name="harap_tunggu_sebentar">Harap tunggu sebentar...</string>
    <string name="produk_disekitarmu">Produk disekitarmu</string>
    <string name="order">Order</string>
    <string name="history_belanjamu_masih_kosong_yuk_belanja_sekarang">History belanjamu masih kosong, yuk belanja sekarang!</string>
    <string name="lihat_semua_produk_yang_dicari">Lihat Semua Produk Yang Dicari</string>
    <string name="notifikasimu_masih_kosong">Notifikasimu masih kosong</string>
    <string name="barang_yang_kamu_cari_tidak_tersedia_yuk_cari_barang_lain_yang_serupa">Barang yang kamu cari tidak tersedia :( Yuk cari barang lain yang serupa!</string>
    <string name="berdasarkan_pencarianmu">Berdasarkan pencarianmu</string>
    <string name="no_handphone_minimal_10_karakter">No Handphone minimal 10 karakter</string>
    <string name="alamat_tidak_boleh_kosong">Alamat tidak boleh kosong</string>
    <string name="belum_ada_produkmu_yang_terjual_nih_sabar_ya_rejeki_nggak_kemana_kok">Belum ada produkmu yang terjual nih, sabar ya rejeki nggak kemana kok</string>
    <string name="belum_menemukan_barang_yang_anda_inginkan_cari_di_second_chance">Belum menemukan barang yang anda inginkan?<b> Cari di Second Chance</b></string>
    <string name="kamu_belum_melakukan_order_produk">Kamu belum melakukan order produk</string>
    <string name="kamu_belum_memiliki_wishlist_yuk_mulai_cari_barang_yang_kamu_inginkan">Kamu belum memiliki wishlist, yuk mulai cari barang yang kamu inginkan</string>
    <string name="terakhir_dilihat">Terakhir dilihat</string>
</resources>