<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/selector_home"
        android:title="@string/home"
        />

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/selector_notification"
        android:title="@string/notifikasi"
        />

    <item
        android:id="@+id/addProductFragment"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:title="@string/jual" />

    <item
        android:id="@+id/daftarJualSayaFragment"
        android:icon="@drawable/ic_baseline_list_24"
        android:title="@string/daftar_jual" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/selector_profile"
        android:title="@string/profile" />

</menu>