<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".view.fragment.RegisterFragment">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/image"/>

    <TextView
        style="@style/TextViewStyle"
        android:layout_marginTop="43dp"
        android:text="@string/register"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        style="@style/TextViewStyle"
        android:layout_marginTop="24dp"
        android:text="@string/nama"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_name"
        style="@style/EditTextStyle"
        android:layout_marginTop="4dp"
        android:autofillHints="Username"
        android:hint="@string/contoh_johndee"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tv_err_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/nama_minimal_3_karakter"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:visibility="gone" />

    <TextView
        style="@style/TextViewStyle"
        android:layout_marginTop="24dp"
        android:text="@string/email"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_email"
        style="@style/EditTextStyle"
        android:layout_marginTop="4dp"
        android:autofillHints="emailAddress"
        android:hint="@string/contoh_johndee_gmail_com"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tv_err_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/email_tidak_sesuai_format"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:visibility="gone" />

    <TextView
        style="@style/TextViewStyle"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        android:textSize="14sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_password"
            style="@style/EditTextStyle"
            android:layout_marginTop="10dp"
            android:hint="@string/masukkan_password"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <ImageView
            android:id="@+id/btn_view_pass"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignTop="@+id/et_password"
            android:layout_alignEnd="@+id/et_password"
            android:layout_alignBottom="@+id/et_password"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_outline_remove_green_eye_24" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_err_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/password_minimal_6_karakter"
        android:textColor="@color/red"
        android:fontFamily="@font/poppins_regular"
        android:textSize="12sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_register"
        style="@style/ButtonStyle"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="48dp"
        android:text="@string/register" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/sudah_punya_akun" />

            <TextView
                android:id="@+id/tv_register"
                style="@style/TextViewStyle"
                android:layout_marginStart="6dp"
                android:text="@string/masuk_di_sini"
                android:textColor="@color/purple"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>