<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="10dp"
    tools:context=".view.fragment.EditProdukFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/lengkapi_detail_produk"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="24dp"
                style="@style/TextViewStyle"
                android:text="@string/nama_produk"/>

            <EditText
                android:id="@+id/et_product"
                style="@style/EditTextStyle"
                android:hint="@string/nama_produk"
                android:inputType="text"
                android:autofillHints="name"
                android:layout_marginTop="4dp"/>

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/harga_produk"
                android:layout_marginTop="16dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_price"
                    style="@style/EditTextStyle"
                    android:layout_marginTop="4dp"
                    android:autofillHints="price"
                    android:hint="@string/rp_0_00"
                    android:inputType="number"
                    android:paddingStart="40dp"
                    android:paddingTop="200dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingStart="16dp"
                    android:paddingTop="14dp"
                    android:text="@string/rp"
                    tools:ignore="RtlSymmetry" />
            </RelativeLayout>


            <TextView
                style="@style/TextViewStyle"
                android:text="@string/kategori"
                android:layout_marginTop="16dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/btn_category"
                    style="@style/EditTextStyle"
                    android:autofillHints="search"
                    android:contentDescription="@string/image_search"
                    android:inputType="none" />

                <TextView
                    android:id="@+id/tv_select_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="#BABABA"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="14dp"
                    android:text="@string/pilih_kategori"
                    android:fontFamily="@font/poppins_regular"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/deskripsi"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/et_description"
                style="@style/EditTextStyle"
                android:hint= "@string/deskripsi"
                android:inputType="textMultiLine"
                android:layout_height="100dp"
                android:gravity="top"
                android:autofillHints="name"
                android:layout_marginTop="4dp"/>

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/foto_produk"
                android:layout_marginTop="16dp"/>

            <ImageView
                android:id="@+id/img_product"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_add_img"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/add_image" />

            <RelativeLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_preview"
                    style="@style/ButtonStyle"
                    android:layout_width="160dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/style_white_button"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/preview" />

                <Button
                    android:id="@+id/btn_terbitkan"
                    style="@style/ButtonStyle"
                    android:layout_width="160dp"
                    android:layout_alignParentBottom="true"
                    android:layout_toEndOf="@+id/btn_preview"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/edit_produk" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>