<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_margin="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.InfoPenawarDuaFragment">

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/info_penawar"
        android:textSize="28sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_margin="20dp"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/ic_photo_profile"/>

        <LinearLayout
            android:layout_marginStart="120dp"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_pembeli"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20dp"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kota"
                android:textSize="15dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_titledua"
        style="@style/TextViewStyle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/daftar_produuk_yang_ditawar"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_notification"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_title"
        tools:listitem="@layout/item_infopenawar" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/ButtonGrayStyle"
                android:text="@string/tolak"
                android:textSize="18sp"
                android:layout_marginEnd="20dp" />

            <Button
                style="@style/ButtonStyle"
                android:textSize="18sp"
                android:text="@string/terima"
                android:src="@drawable/ic_btn_diminati" />


        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>